Closed Bug 1802173 Opened 1 year ago Closed 1 year ago

Worklet.addModule should return AbortError if fails to fetch the script

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
109 Branch
Tracking Status
firefox109 --- fixed

People

(Reporter: allstars.chh, Assigned: allstars.chh)

Details

Attachments

(1 file)

This is similar to Bug 1799107, I found another place that should return AbortError in Worklet::AddModule.

Pushed by allstars.chh@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/a6a8b8b4e741
Worklet.AddModule should return AbortError if fails to fetch the script. r=smaug
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: