Bug 1802173: Worklet.AddModule should return AbortError if fails to fetch the script. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D162867